[tool.poetry]
name = "incidentbot"
version = "2.2.3"
description = "The open source incident management framework."
authors = ["Scott Hawkins <scott@echoboomer.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14.2"
alembic = "^1.17.2"
apscheduler = "^3.11.2"
atlassian-python-api = "^4.0.7"
bcrypt = "^5.0.0"
emails = "^0.6"
fastapi = "^0.127.0"
jinja2 = "^3.1.6"
mkdocs-glightbox = "^0.5.2"
mkdocs-material = "^9.7.1"
pagerduty = "^6.1.0"
psycopg2-binary = "^2.9.11"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = {extras = ["yaml"], version = "^2.12.0"}
pyjwt = "^2.10.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.3.0"
pytest-env = "^1.2.0"
pytest-mock = "^3.15.1"
pytest-sqlalchemy-mock = "^0.1.7"
python-dotenv = "^1.2.1"
python-gitlab = {extras = ["graphql"], version = "^7.0.0"}
python-json-logger = "^4.0.0"
python-multipart = "^0.0.21"
requests = "^2.32.5"
requests-mock = "^1.12.1"
ruff = "^0.14.10"
slack-bolt = "^1.27.0"
slack-sdk = "^3.39.0"
sqlmodel = "^0.0.28"
structlog = "^25.5.0"
uvicorn = "^0.40.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
